updated job descriptions

--- a/views/index.html
+++ b/views/index.html
@@ -420,16 +420,16 @@
 				<img class="img-responsive img-rounded" src="../resources/paperGimage.png"></img>
 				<br/>
 				<p>
-					I help lead and motivate test efforts, expanding and improving our testing and CI platform by:
+					I was one of two SDETs who built and expended our testing and CI infrastructure.
 					<ul>
 						<li><p>Promoted in 4 months based on merit.</p></li>
-						<li><p>Making the CI process transparent for devs with improved performance, tools, and features</p></li>
-						<li><p>Increasing reliability of UI tests with custom utilities, reducing false negatives by ~80%</p></li>
-						<li><p>Preventing regression with reliable, multi-browser automated UI tests and monitoring </p></li>
-						<li><p>Help leading test efforts to raise product quality with intelligent coverage across unit, functional, integration, and automated tests</p></li>
-						<li><p>Offered and received technical help on a daily basis to encourage a culture of growth</p></li>
+						<li><p>Developed tools, features, and infrastructure that improved test performance.</p></li>
+						<li><p>Developed tools for test automation authors to ensure reliable UI tests. (~80% less false negatives)</p></li>
+						<li><p>Implemented multi-browser automated UI tests and monitoring. </p></li>
+						<li><p>Helped lead, organize, and unify team test team efforts to be more effective.</p></li>
+						<li><p>Offered and received technical help on a daily basis to encourage a culture of growth.</p></li>
 					</ul>
-					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
+					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools which I developed with.
 					<br/><br/>
 					<div style='width:90%; font-size:0.9em;margin-left:5%;border-top:1px solid grey;'>
 						<br/>
