--- a/views/index.html
+++ b/views/index.html
@@ -420,7 +420,7 @@
 				<img class="img-responsive img-rounded" src="../resources/paperGimage.png"></img>
 				<br/>
 				<p>
-					I was one of two SDETs who built and expended our testing and CI infrastructure.
+					I was one of two SDETs who built and expanded our testing and CI infrastructure.
 					<ul>
 						<li><p>Promoted in 4 months based on merit.</p></li>
 						<li><p>Developed tools, features, and infrastructure that improved test performance.</p></li>
