--- a/views/index.html
+++ b/views/index.html
@@ -400,6 +400,7 @@
 						<li><p>Programming primarily in C# to develop automation tools that facilitate complex environments with several different simultaneously running products and vastly varying device types.</p></li>
 						<li><p>Working side-by-side with developers on several projects to develop test automation tools that provide a scalable toolset and simple test authoring interface.</p></li>
 						<li><p>Writing and improving org-wide tools.</p></li>
+						<li><p>Debugging and solving complex problems across multiple teams.</p></li>
 					</ul>
 					<br/><br/>
 					<!-- QUOTE TBD
