Major design overhaul. Consistent color theme, new fonts, clearer nav bar, active navbar items, clean projects, new project thumb menu, new skills section, small color and size tweaks in education and experience

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -15,7 +15,7 @@
 	color:white;
 	font-weight: bold;
 	float:right;
-	background-color: #3498DB;
+	background-color: rgb(68, 80, 96);
 	width:100%;
 	margin-top:20px; 
 	letter-spacing: .3em;
@@ -28,9 +28,9 @@
 
 #send-email-button:hover{
 	background-color: white;
-	color: #3498DB;
+	color: rgb(68, 80, 96);
 }
 
 #contact-screen{
-	background-color: #3498DB;
+	background-color: rgb(68, 80, 96);
 }
