--- a/styles/skills.css
+++ b/styles/skills.css
@@ -59,6 +59,9 @@
 .attribute-description{
 	max-width: 100%;
 	word-break:break-word;
+	
+	height:100px;
+	overflow: auto;
 }
 
 .bar-info{
@@ -79,5 +82,101 @@
 
 .progress:hover img{
 	transform: scale(0.5);
+}
+
+/* NEW STYLE */
+/* Skill Bar */
+.skill-button-container{
+	width:100%;
+	height:auto;
+}
+
+.skill-button{
+	display: inline-block;
+	
+	border: 1px solid rgb(217, 217, 217);
+	border-radius: 2px;
+	
+	background-color: rgb(242, 239, 239);
+	color: white;
+	
+	height: 30px;
+	width: 90%;
+	
+	margin-bottom: 15px;
+}
+
+.skill-button:hover{
+	cursor: pointer;
+}
+
+.skill-progress{
+	border-radius: 2px;
+	
+	background-color: rgb(68, 80, 96);
+	
+	height: 100%;
+	
+	padding-top:4px;
+	padding-left:20px;
+}
+
+.skill-progress-active{
+	background-color: rgb(123, 137, 157);
+}
+
+.skill-progress p{
+	font-size: 0.9em;
+}
+
+.left-bracket{
+	display: inline-block;
+	
+	width:auto;
+	height:auto;
+	
+	margin-left: -17px;
+	margin-right: 4px;
+}
+
+.bracket-big{
+	margin-top:35px;	
+}
+
+.bracket-big img{
+	height:250px;
+}
+
+.left-bracket-big{	
+	float:right;
+	
+	width:30px;
+	
+	margin-right: 10px;
+}
+
+.right-bracket-big{	
+	float:left;
+	
+	width:30px;
+	
+	margin-left:-30px;
+}
+
+.right-bracket{
+	display: inline-block;
+	
+	width:auto;
+	height:auto;
+	
+	margin-left:5px;
+}
+
+/* Skill Description */
+.skill-description-container{
+	width:auto;
+	height:auto;
+	
+	margin-top:60px;
 }
 
