--- a/styles/page.css
+++ b/styles/page.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: montserrat;
-    src: 	url(../fonts/montserrat/Montserrat-Light.otf);
+    src: 	url(fonts/montserrat/Montserrat-Light.otf);
 }
 
 body{
