--- a/styles/page.css
+++ b/styles/page.css
@@ -5,7 +5,16 @@
 
 @font-face {
     font-family: montserrat;
-    src: 	url("Montserrat-Light.otf") format("opentype");
+    src: 	url(../fonts/montserrat/Montserrat-Light.ttf);
+}
+
+@font-face{ 
+	font-family: 'MyWebFont';
+	src: url('../fonts/Action_Man_Shaded-webfont.eot');
+	src: url('../fonts/Action_Man_Shaded-webfont') format('eot'),
+	     url('../fonts/Action_Man_Shaded-webfont.woff') format('woff'),
+	     url('../fonts/Action_Man_Shaded-webfont.ttf') format('truetype'),
+	     url('../fonts/Action_Man_Shaded-webfont.svg#webfont') format('svg');
 }
 
 body{
@@ -31,7 +40,7 @@ body{
 }
 
 h1{
-	font-family: montserrat;
+	font-family: MyWebFont;
 	font-size: 22pt;
 	letter-spacing: 130;
 	/*font-weight:bold;
