--- a/styles/page.css
+++ b/styles/page.css
@@ -40,7 +40,7 @@ body{
 }
 
 h1{
-	font-family: MyWebFont;
+	font-family: montserrat;
 	font-size: 22pt;
 	letter-spacing: 130;
 	/*font-weight:bold;
