--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,10 +1,8 @@
 /* NAVBAR */
 .navbar-default{
 	background-color:white;
-	opacity: .85;
-
-	font-weight: bold;
-
+	opacity: 1;
+	letter-spacing:0.11em;
 	text-align: center;
 	
 	box-shadow: 0px 0px 10px #888888;
