Clean up bracket assets. Add design presentation to site portfolio thumb. Rearrange portfolio projects.

--- a/views/index.html
+++ b/views/index.html
@@ -174,13 +174,25 @@
 					</div>
 					<p>Building an automation framework in C# to work across several products.</p>
 				</div>
+				<!-- Resume Site -->
+				<div class="portfolio-item-container">
+					<h3>This Site</h3>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(2)' ng-mouseleave='hideMenu(2)'>
+						<div class="portfolio-item-menu">
+							<a class="portfolio-item-menu-button" ng-show="hovered == 2" href="https://docs.google.com/presentation/d/1eO1ezPNU0NCALk4fwgI-giFDU3kHjcM21UuJ1Minh7s/edit?usp=sharing" target="_blank">DESIGN</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 2" href="https://github.com/aconfee/AdamEstelaResume" target="_blank">GIT</a>
+						</div>
+						<img class='img-responsive' src="../resources/portfolio/hi/resume_hi.png"></img>
+					</div>
+					<p style="height:40px;">Spent one month learning web development outside of work to build this site.</p>
+				</div>
 				<!-- Graphics Projects -->
 				<div class="portfolio-item-container">
 					<h3>Graphics</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(2)' ng-mouseleave='hideMenu(2)'>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(3)' ng-mouseleave='hideMenu(3)'>
 						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 2" href="https://www.youtube.com/user/MrAconfee/videos" target="_blank">WATCH</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 2" href="https://aeprogramming.wordpress.com/graphics/" target="_blank">MORE</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 3" href="https://www.youtube.com/user/MrAconfee/videos" target="_blank">WATCH</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 3" href="https://aeprogramming.wordpress.com/graphics/" target="_blank">MORE</a>
 						</div>
 						<img class='img-responsive' src="../resources/portfolio/hi/graphics.png"></img>
 					</div>
@@ -189,48 +201,48 @@
 				<!-- Survaillent -->
 				<div class="portfolio-item-container">
 					<h3>Surveillant</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(3)' ng-mouseleave='hideMenu(3)'>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(4)' ng-mouseleave='hideMenu(4)'>
 						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 3" href="http://gamejolt.com/games/surveillant/107686" target="_blank">PLAY</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 3" href="https://www.youtube.com/watch?v=4pAcfkc9fhU&feature=youtu.be" target="_blank">WATCH</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 3" href="https://aeprogramming.wordpress.com/games/" target="_blank">MORE</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 4" href="http://gamejolt.com/games/surveillant/107686" target="_blank">PLAY</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 4" href="https://www.youtube.com/watch?v=4pAcfkc9fhU&feature=youtu.be" target="_blank">WATCH</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 4" href="https://aeprogramming.wordpress.com/games/" target="_blank">MORE</a>
 						</div>
 						<img class='img-responsive' src="../resources/portfolio/hi/survaillent_3.png"></img>
 					</div>
 					<p style="height:40px;">Horror game built in 48 hours with Unity.</p>
 				</div>
+				<!-- Kim Gallery -->
+				<div class="portfolio-item-container">
+					<h3>Art Portfolio</h3>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(5)' ng-mouseleave='hideMenu(5)'>
+						<div class="portfolio-item-menu">
+							<a class="portfolio-item-menu-button" ng-show="hovered == 5" href="http://kimgreenoughportfolio.azurewebsites.net/" target="_blank">LIVE</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 5" href="https://github.com/aconfee/KimPortfolio" target="_blank">GIT</a>
+						</div>
+						<img class='img-responsive' src="../resources/portfolio/hi/kimsite.png"></img>
+					</div>
+					<p style="height:40px;">Interactive single-page portfolio built with AngularJS.</p>
+				</div>
 				<!-- Sweet Home -->
 				<div class="portfolio-item-container">
 					<h3>Sweet Home</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(4)' ng-mouseleave='hideMenu(4)'>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(6)' ng-mouseleave='hideMenu(6)'>
 						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 4" href="http://gamejolt.com/games/sweet-home/107328" target="_blank">PLAY</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 4" href="https://www.youtube.com/watch?v=h2tObm8D7N0" target="_blank">WATCH</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 6" href="http://gamejolt.com/games/sweet-home/107328" target="_blank">PLAY</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 6" href="https://www.youtube.com/watch?v=h2tObm8D7N0" target="_blank">WATCH</a>
 						</div>
 						<img class='img-responsive' src="../resources/portfolio/hi/sweethome.png"></img>
 					</div>
 					<p style="height:40px;">Horror game built in 48 hours with Unreal. Learned Unreal on the fly.</p>
 				</div>
-				<!-- Resume Site -->
-				<div class="portfolio-item-container">
-					<h3>This Site</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(5)' ng-mouseleave='hideMenu(5)'>
-						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 5" href="http://adamestelaresume.azurewebsites.net/" target="_blank">VIEW</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 5" href="https://github.com/aconfee/AdamEstelaResume" target="_blank">GIT</a>
-						</div>
-						<img class='img-responsive' src="../resources/portfolio/hi/resume_hi.png"></img>
-					</div>
-					<p style="height:40px;">Spent one month learning web development outside of work to build this site.</p>
-				</div>
 				<!-- Wub Wub Racer Magic -->
 				<div class="portfolio-item-container">
 					<h3>Wub Wub Racer Magic</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(6)' ng-mouseleave='hideMenu(6)'>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(7)' ng-mouseleave='hideMenu(7)'>
 						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 6" href="http://games.digipen.edu/downloads/WubWubRacerMagic_setup?id=1170&download=26685#.VXZhC0al_9J" target="_blank">PLAY</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 6" href="https://www.youtube.com/watch?v=8g9GvAu6Os4" target="_blank">WATCH</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 6" href="https://aeprogramming.wordpress.com/games/" target="_blank">MORE</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 7" href="http://games.digipen.edu/downloads/WubWubRacerMagic_setup?id=1170&download=26685#.VXZhC0al_9J" target="_blank">PLAY</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 7" href="https://www.youtube.com/watch?v=8g9GvAu6Os4" target="_blank">WATCH</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 7" href="https://aeprogramming.wordpress.com/games/" target="_blank">MORE</a>
 						</div>
 						<img class='img-responsive' src="../resources/portfolio/hi/WubWubRacerMagic.png"></img>
 					</div>
@@ -239,26 +251,14 @@
 				<!-- AI Class Project -->
 				<div class="portfolio-item-container">
 					<h3>Artificial Intelligence</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(7)' ng-mouseleave='hideMenu(7)'>
+					<div class='portfolio-item games' ng-mouseenter='showMenu(8)' ng-mouseleave='hideMenu(8)'>
 						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 7" href="https://www.youtube.com/watch?v=d_7Cx3_slsg&list=UUlfeZAnjyOWyE3ysVMvWlhQ" target="_blank">WATCH</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 7" href="https://aeprogramming.wordpress.com/artificial-intelligence/" target="_blank">MORE</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 8" href="https://www.youtube.com/watch?v=d_7Cx3_slsg&list=UUlfeZAnjyOWyE3ysVMvWlhQ" target="_blank">WATCH</a>
+							<a class="portfolio-item-menu-button" ng-show="hovered == 8" href="https://aeprogramming.wordpress.com/artificial-intelligence/" target="_blank">MORE</a>
 						</div>
 						<img class='img-responsive' src="../resources/portfolio/hi/ai1.png"></img>
 					</div>
 					<p style="height:40px;">A* with obstructing object detection, and several influencing heat maps.</p>
-				</div>
-				<!-- Kim Gallery -->
-				<div class="portfolio-item-container">
-					<h3>Art Portfolio</h3>
-					<div class='portfolio-item games' ng-mouseenter='showMenu(8)' ng-mouseleave='hideMenu(8)'>
-						<div class="portfolio-item-menu">
-							<a class="portfolio-item-menu-button" ng-show="hovered == 8" href="http://kimgreenoughportfolio.azurewebsites.net/" target="_blank">LIVE</a>
-							<a class="portfolio-item-menu-button" ng-show="hovered == 8" href="https://github.com/aconfee/KimPortfolio" target="_blank">GIT</a>
-						</div>
-						<img class='img-responsive' src="../resources/portfolio/hi/kimsite.png"></img>
-					</div>
-					<p style="height:40px;">Interactive single-page portfolio built with AngularJS.</p>
 				</div>
 				<!-- PaperG -->
 				<div class="portfolio-item-container">
